--- a/package.json
+++ b/package.json
@@ -1,39 +1,58 @@
 {
-  "name": "cdn",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
-  },
-  "scripts": {
-    "start": "PORT=5000 react-scripts start -",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
+    "name": "trender_cdn",
+    "version": "1.0.0",
+    "description": "trender cdn",
+    "main": "./src/index.ts",
+    "homepage": "https://trenderapp.com",
+    "keywords": [
+      "trender",
+      "cdn",
+      "official"
     ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "author": "Trender Inc.",
+    "private": true,
+    "license": "GPL",
+    "scripts": {
+      "prepare": "is-ci || husky install",
+      "format": "prettier --write src/**/*.js src/**/*.ts",
+      "kill": "pm2 kill",
+      "poststart": "node dist/index.js",
+      "test": "npm run lint && npm run lint:typings && npm run test:typescript",
+      "test:typescript": "tsc --noEmit",
+      "lint": "eslint src",
+      "lint:typings": "tslint src/index.ts",
+      "lint:fix": "eslint src --fix",
+      "dev": "ts-node ./src/index.ts",
+      "build": "rm -rf ./dist && tsc",
+      "prepare:prod": "yarn install --production=true",
+      "update": "yarn upgrade-interactive --latest",
+      "unitest": "vitest"
+    },
+    "dependencies": {
+      "cors": "^2.8.5",
+      "express": "^4.18.2",
+      "morgan": "^1.10.0",
+      "tslib": "^2.6.2"
+    },
+    "devDependencies": {
+      "@types/cors": "^2.8.14",
+      "@types/express": "^4.17.19",
+      "@types/morgan": "^1.9.6",
+      "@types/node": "18.13.0",
+      "@typescript-eslint/eslint-plugin": "^6.2.0",
+      "@typescript-eslint/parser": "^6.2.0",
+      "dtslint": "^4.2.1",
+      "eslint": "^8.45.0",
+      "eslint-config-prettier": "^8.8.0",
+      "eslint-plugin-import": "^2.27.5",
+      "husky": "^8.0.3",
+      "is-ci": "^3.0.1",
+      "jest": "^29.6.1",
+      "lint-staged": "^13.2.3",
+      "prettier": "^3.0.3",
+      "ts-node": "^10.9.1",
+      "tslint": "^6.1.3",
+      "typescript": "5.1.6"
+    }
   }
-}
+  
